--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "private": true,
   "dependencies": {
+    "-": "0.0.1",
     "@angular/animations": "^12.2.13",
     "@angular/cdk": "^13.0.2",
     "@angular/common": "~12.2.0",
@@ -22,6 +23,12 @@
     "@angular/platform-browser": "~12.2.0",
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
+    "@swimlane/ngx-charts": "^19.1.0",
+    "annotation": "^0.1.0",
+    "chart.js": "^3.6.2",
+    "chartjs": "^0.3.24",
+    "ng2-charts": "^3.0.1",
+    "plugin": "^0.3.3",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
@@ -45,6 +52,7 @@
     "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
+    "ng2-charts-schematics": "^0.1.7",
     "typescript": "~4.3.5"
   }
 }
